<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio">

    <TextView android:text="@string/port_activity_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_activity_spotstream"
        android:id="@+id/spotifyButton"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="spotifyStreamer"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_activity_scores"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyButton"
        android:layout_marginTop="20dp"
        android:onClick="scores"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_activity_lib"
        android:id="@+id/libraryButton"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/scoresButton"
        android:layout_centerHorizontal="true"
        android:onClick="library"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_activity_build"
        android:id="@+id/biggerButton"
        android:layout_below="@+id/libraryButton"
        android:layout_marginTop="20dp"
        android:onClick="buildItBigger"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_activity_xyz"
        android:id="@+id/xyzButton"
        android:layout_below="@+id/biggerButton"
        android:layout_marginTop="20dp"
        android:onClick="xyzReader"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_activity_capstone"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="capstone"/>

</RelativeLayout>
